--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 
-<!--
- // WEBSITE: https://themefisher.com
- // TWITTER: https://twitter.com/themefisher
- // FACEBOOK: https://www.facebook.com/themefisher
- // GITHUB: https://github.com/themefisher/
--->
+
 
 <html lang="en">
 <head>
@@ -37,7 +32,7 @@
 
 <nav class="navbar navbar-expand-lg fixed-top trans-navigation">
   <div class="container">
-    <a class="navbar-brand" href="index.html">
+    <a class="navbar-brand" href="https://homavel.me/">
       <img src="images/logo.png" alt="" class="img-fluid b-logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="mainNav"
@@ -297,7 +292,6 @@ Worrying about leaving some lights on or forgetting any device to turn off after
       <div class="col-lg-8 text-center">
         <div class="mb-5">
           <h3 class="mb-2">Trusted by hundred </h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, dignissimos?</p>
         </div>
       </div>
     </div>
@@ -468,8 +462,6 @@ Worrying about leaving some lights on or forgetting any device to turn off after
        <div class="col-lg-12 col-sm-12 col-mfd-12">
          <div class="section-heading">
            <h4 class="section-title">Get in touch</h4>
-           <p>Have a project on mind,want to make an consultant. Don't hesistate to contact us.Let's have
-             atalk together.Colaborat your project to done quickly</p>
          </div>
        </div>
      </div>
@@ -484,7 +476,7 @@ Worrying about leaving some lights on or forgetting any device to turn off after
                <div class="col-md-6 form-group">
                  <input name="email" id="email" type="email" class="form-control" placeholder="Email" required>
                </div>
-               <input type="hidden" name="_next" value="https://mohamedsaied-dev.github.io/Homavel.com/">
+               <input type="hidden" name="_next" value="https://homavel.me/">
                <input type="hidden" name="_captcha" value="false">
                <div class="col-md-12 form-group">
                  <input name="subject" id="subject" type="text" class="form-control" placeholder="Subject" required>
@@ -546,22 +538,12 @@ Worrying about leaving some lights on or forgetting any device to turn off after
 <!--  COUNTER AREA END  -->
 <!--  FOOTER AREA START  -->
 <section id="footer" class="section-padding">
-  <div class="container">
-    <div class="row justify-content-around">
-      <div class="col-lg-4">
-        <div class="footer-widget footer-link">
-          <h4>We concern about you<br> to grow business rapidly.</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore ipsam hic non sunt recusandae atque unde saepe nihil earum voluptatibus aliquid optio suscipit nobis quia vel quod, iure quae>    Tarek Mohamed, CEO</p>
-        </div>
-      </div>
       <div class="col-lg-2 col-md-4 col-6">
         <div class="footer-widget footer-link">
           <h4>About</h4>
           <ul>
             <li><a href="#about">About</a></li>
             <li><a href="#service">Service</a></li>
-            <li><a href="#!">Team</a></li>
-            <li><a href="#!">Testimonials</a></li>
             <li><a href="#blog">Blog</a></li>
           </ul>
         </div>
@@ -587,7 +569,7 @@ Worrying about leaving some lights on or forgetting any device to turn off after
     <div class="row">
       <div class="col-lg-12 text-center">
         <div class="footer-copy">
-          Copyright &copy; 2023, Designed &amp; Developed by <a href="https://themefisher.com/">Homavel</a>
+          Copyright &copy; 2023, Designed &amp; Developed by <a href="https://homavel.me/">Homavel</a>
         </div>
       </div>
     </div>
