--- a/index.html
+++ b/index.html
@@ -538,6 +538,12 @@ Worrying about leaving some lights on or forgetting any device to turn off after
 <!--  COUNTER AREA END  -->
 <!--  FOOTER AREA START  -->
 <section id="footer" class="section-padding">
+  <div class="container">
+    <div class="row justify-content-around">
+      <div class="col-lg-4">
+        <div class="footer-widget footer-link">
+        </div>
+      </div>
       <div class="col-lg-2 col-md-4 col-6">
         <div class="footer-widget footer-link">
           <h4>About</h4>
@@ -553,15 +559,15 @@ Worrying about leaving some lights on or forgetting any device to turn off after
         <div class="footer-widget footer-link">
           <h4>Quick Links</h4>
           <ul>
-            <li><a href="https://www.facebook.com/homavelco?mibextid=ZbWKwL"  target="_blank">Facebook Page</a></li>
-            <li><a href="https://instagram.com/homavelco?igshid=YmMyMTA2M2Y="  target="_blank">Instagram Page</a></li>
+            <li><a href="https://www.facebook.com/homavelco?mibextid=ZbWKwL"  target="_blank">Facebook Bage</a></li>
+            <li><a href="https://instagram.com/homavelco?igshid=YmMyMTA2M2Y="  target="_blank">Intstagram Bage</a></li>
           </ul>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-sm-12">
         <div class="footer-widget footer-text">
           <h4>Our info</h4>
-          <p class="mail"><span>Mail:</span> homavelco@gmail.com</p>
+          <p class="mail"><span>Mail:</span> mohamedsaied77783@gmail.com</p>
           <p><span>Phone :</span>+0201032900809 / +0201008094813</p>
         </div>
       </div>
