--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ Worrying about leaving some lights on or forgetting any device to turn off after
      <div class="row">
        <div class="col-lg-8 col-sm-12 m-auto">
          <div class="contact-form ">
-           <form class="contact__form" method="post" action="https://formsubmit.co/mohamedsaied77783@gmail.com">
+           <form class="contact__form" method="post" action="https://formsubmit.co/info@homavel.tech">
              <div class="row">
                <div class="col-md-6 form-group">
                  <input name="name" id="name" type="text" class="form-control" placeholder="Name" required>
@@ -567,7 +567,7 @@ Worrying about leaving some lights on or forgetting any device to turn off after
       <div class="col-lg-3 col-md-4 col-sm-12">
         <div class="footer-widget footer-text">
           <h4>Our info</h4>
-          <p class="mail"><span>Mail:</span> mohamedsaied77783@gmail.com</p>
+          <p class="mail"><span>Mail:</span> info@homavel.tech</p>
           <p><span>Phone :</span>+0201032900809 / +0201008094813</p>
         </div>
       </div>
