--- a/index.html
+++ b/index.html
@@ -559,8 +559,8 @@ Worrying about leaving some lights on or forgetting any device to turn off after
         <div class="footer-widget footer-link">
           <h4>Quick Links</h4>
           <ul>
-            <li><a href="https://www.facebook.com/homavelco?mibextid=ZbWKwL"  target="_blank">Facebook Bage</a></li>
-            <li><a href="https://instagram.com/homavelco?igshid=YmMyMTA2M2Y="  target="_blank">Intstagram Bage</a></li>
+            <li><a href="https://www.facebook.com/homavelco?mibextid=ZbWKwL"  target="_blank">Facebook Page</a></li>
+            <li><a href="https://instagram.com/homavelco?igshid=YmMyMTA2M2Y="  target="_blank">Instagram Page</a></li>
           </ul>
         </div>
       </div>
