--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@ Worrying about leaving some lights on or forgetting any device to turn off after
   <div class="container">
     <div class="row">
       <div class="col-lg-3 col-sm-6 col-md-3 text-center">
-        <img src="images/clients/pic.png" alt="partner" class="img-fluid">
+        <img src="images/clients/picf.png" alt="partner" class="img-fluid">
       </div>
        <div class="col-lg-3 col-sm-6 col-md-3 text-center">
         <img src="images/clients/TSC Logo.png" alt="partner" class="img-fluid">
