--- a/index.html
+++ b/index.html
@@ -434,9 +434,9 @@ Worrying about leaving some lights on or forgetting any device to turn off after
           <img src="images/blog/blog-1.jpg" alt="" class="w-100">
           <div class="blog-text">
             <h6 class="author-name"><span>Smart Gaming Room</span>Apkrino</h6>
-            <a href="blog-single.html" class="h5 my-2 d-inline-block">
-              Best Smart Gaming Room Building with all accessories.
-            </a>
+            <div class="section-heading">
+          <p class="lead">We Provide smart Solutions make you react with your home by your pocket device anywhere and anytime</p>
+        </div>
             <p> If you want to build your smart room from zero with gaming style just start with us.
             </p>
           </div>
@@ -447,9 +447,9 @@ Worrying about leaving some lights on or forgetting any device to turn off after
           <img src="images/blog/blog-2.jpg" alt="" class="w-100">
           <div class="blog-text">
             <h6 class="author-name"><span>Room Transformation</span>Silvatshu</h6>
-            <a href="blog-single.html" class="h5 my-2 d-inline-block">
+            <h3 
               Transform ordinary Room to smart Content Creator Room.
-            </a>
+            </h3>
             <p>you just want to start get benefit of every space in your room tranform it with high Experienced team of Architects to smart one and more usable .</p>
           </div>
         </div>
