--- a/index.html
+++ b/index.html
@@ -435,7 +435,9 @@ Worrying about leaving some lights on or forgetting any device to turn off after
           <div class="blog-text">
             <h6 class="author-name"><span>Smart Gaming Room</span>Apkrino</h6>
             <div class="section-heading">
-          <p class="lead">We Provide smart Solutions make you react with your home by your pocket device anywhere and anytime</p>
+          <h5 
+              Best Smart Gaming Room Building with all accessories.
+            </h5>
         </div>
             <p> If you want to build your smart room from zero with gaming style just start with us.
             </p>
