--- a/index.html
+++ b/index.html
@@ -435,9 +435,10 @@ Worrying about leaving some lights on or forgetting any device to turn off after
           <div class="blog-text">
             <h6 class="author-name"><span>Smart Gaming Room</span>Apkrino</h6>
             <div class="section-heading">
-          <h5 
-              Best Smart Gaming Room Building with all accessories.
-            </h5>
+           <a href="#" disabled class="h5 my-2 d-inline-block">
+             Best Smart Gaming Room Building with all accessories.
+            </a> 
+
         </div>
             <p> If you want to build your smart room from zero with gaming style just start with us.
             </p>
@@ -449,9 +450,10 @@ Worrying about leaving some lights on or forgetting any device to turn off after
           <img src="images/blog/blog-2.jpg" alt="" class="w-100">
           <div class="blog-text">
             <h6 class="author-name"><span>Room Transformation</span>Silvatshu</h6>
-            <h3 
-              Transform ordinary Room to smart Content Creator Room.
-            </h3>
+
+             <a href="#" disabled class="h5 my-2 d-inline-block">
+             Transform ordinary Room to smart Content Creator Room.
+            </a> 
             <p>you just want to start get benefit of every space in your room tranform it with high Experienced team of Architects to smart one and more usable .</p>
           </div>
         </div>
